--- a/index.html
+++ b/index.html
@@ -183,24 +183,34 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
-                    <td>December 12, 2025 09:45 AM</td>
-                    <td><span class="countdown-timer" data-start="December 12, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+                    <td>December 13, 2025 07:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 12, 2025 07:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer-streams-3">Laliga</a></td>
+                    <td>December 13, 2025 07:15 AM</td>
+                    <td><span class="countdown-timer" data-start="December 12, 2025 07:15:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
+                    <td>December 13, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 12, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-                    <td>December 12, 2025 11:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 12, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 13, 2025 11:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 13, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>December 12, 2025 16:00 PM</td>
+                    <td><a href="https://roxiestreams.live/ufc">UFC Fight Night: Royval vs Kape</a></td>
+                    <td>December 13, 2025 16:00 PM</td>
                     <td><span class="countdown-timer" data-start="December 12, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-                    <td>December 12, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 12, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Saturday Night Main Event</a></td>
+                    <td>December 13, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 13, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
