--- a/nfl.html
+++ b/nfl.html
@@ -143,6 +143,34 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/ncaa-streams-1">
+         Prairie View A&M vs South Carolina State
+        </a>
+       </td>
+       <td>
+        December 13, 2025 09:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 9:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-2">
+         Army vs Navy
+        </a>
+       </td>
+       <td>
+        December 13, 2025 09:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 9:00 AM:00">
+        </span>
+       </td>
+      </tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-3">
          Army vs Navy
         </a>
        </td>
@@ -150,21 +178,35 @@
         December 13, 2025 12:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 12:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/ncaa-streams-2">
-         Prairie View A&M vs South Carolina State
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         South Dakota v Montana
         </a>
        </td>
        <td>
-        December 13, 2025 12:00 PM
+        December 13, 2025 12:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Boise State v Washington
+        </a>
+       </td>
+       <td>
+        December 13, 2025 17:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
