--- a/fighting.html
+++ b/fighting.html
@@ -98,10 +98,6 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>December 12, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 12, 2025 17:00:00"></span></td>
-</tr>
 <td><a href="https://roxiestreams.live/ppv-streams-1">JACK vs MIKAELIAN</a></td>
 <td>December 13, 2025 16:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 16:00:00"></span></td>
@@ -109,6 +105,10 @@
 <td><a href="https://roxiestreams.live/ufc">UFC Fight Night: Royval vs Kape</a></td>
 <td>December 13, 2025 16:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 16:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/ppv-streams-2">Redneck Brawl 11</a></td>
+<td>December 13, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 17:00:00"></span></td>
 </tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE Saturday Night Main Event</a></td>
 <td>December 13, 2025 17:00 PM</td>
