--- a/ppv-streams-2.html
+++ b/ppv-streams-2.html
@@ -99,7 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://service.webvideocore.net/CL1olYogIrDWvwqiIKK7eAOfcO82kdxnonZ56UNPC_dlCLLcqkOImkdwRi7GHd1llzSsEGTbQpuOWccnfSqTAT-ZgeIWK_F8tNlXB9y2U7U=/a_5vjuslvzx2sc.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.shadow-ran.online/ppv2.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -134,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://service.webvideocore.net/CL1olYogIrDWvwqiIKK7eAOfcO82kdxnonZ56UNPC_dlCLLcqkOImkdwRi7GHd1llzSsEGTbQpuOWccnfSqTAT-ZgeIWK_F8tNlXB9y2U7U=/a_5vjuslvzx2sc.m3u8');
+            showPlayer('clappr', 'https://600.shadow-ran.online/ppv2.m3u8');
         };
     </script>
     <script>
