--- a/nfl.html
+++ b/nfl.html
@@ -142,6 +142,22 @@
      <tbody>
       <tr>
        <td>
+        <a href="https://roxiestreams.live/redzone">
+         NFL RedZone
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+      <tr>
+       <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
          Cleveland Browns vs Chicago Bears
         </a>
