--- a/MLBSCRIPT/nfl_with_streams.html
+++ b/MLBSCRIPT/nfl_with_streams.html
@@ -157,9 +157,7 @@
 </tr>
 <tr>
 <td>
-<tr>
-<td>
-<a href="https://roxiestreams.live/nfl-streams-1">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122598">
          Cleveland Browns vs Chicago Bears
         </a>
 </td>
@@ -173,7 +171,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-2">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122597">
          Baltimore Ravens vs Cincinnati Bengals
         </a>
 </td>
@@ -187,7 +185,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-3">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122594">
          Los Angeles Rams vs Kansas City Chiefs
         </a>
 </td>
@@ -201,7 +199,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-4">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
          Buffalo Bills vs New England Patriots
         </a>
 </td>
@@ -215,7 +213,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-5">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122592">
          Washington Commanders vs New York
         </a>
 </td>
@@ -229,7 +227,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-6">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122591">
          Las Vegas Raiders vs Philadelphia Eagles
         </a>
 </td>
@@ -243,7 +241,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-7">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122595">
          New York vs Jacksonville Jaguars
         </a>
 </td>
@@ -257,7 +255,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-8">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122596">
          Arizona Cardinals vs Houston Texans
         </a>
 </td>
@@ -271,7 +269,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-9">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122590">
          Green Bay Packers vs Denver Broncos
         </a>
 </td>
@@ -285,7 +283,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-10">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122589">
          Detroit Lions vs Los Angeles Rams
         </a>
 </td>
@@ -299,7 +297,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-11">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122588">
          Carolina Panthers vs New Orleans Saints
         </a>
 </td>
@@ -313,7 +311,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-12">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122586">
          Tennessee Titans vs San Francisco 49ers
         </a>
 </td>
@@ -327,7 +325,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-13">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122587">
          Indianapolis Colts vs Seattle Seahawks
         </a>
 </td>
@@ -341,7 +339,7 @@
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-14">
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122585">
          Minnesota Vikings vs Dallas Cowboys
         </a>
 </td>
@@ -353,7 +351,7 @@
 </span>
 </td>
 </tr>
-</td></tr></tbody>
+</tbody>
 </table>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
