--- a/nhl.html
+++ b/nhl.html
@@ -159,6 +159,54 @@
             <td><a href="https://roxiestreams.live/nhl-streams-13">Seattle Kraken vs San Jose Sharks</a></td>
             <td>December 20, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-21 19:00:00" data-start="2025-12-20 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, December 21, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Washington Capitals vs Detroit Red Wings</a></td>
+            <td>December 21, 2025 10:00 AM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 10:00:00" data-start="2025-12-21 10:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Colorado Avalanche vs Minnesota Wild</a></td>
+            <td>December 21, 2025 03:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 15:00:00" data-start="2025-12-21 15:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Ottawa Senators vs Boston Bruins</a></td>
+            <td>December 21, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 16:00:00" data-start="2025-12-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Buffalo Sabres vs New Jersey Devils</a></td>
+            <td>December 21, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 16:00:00" data-start="2025-12-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Montreal Canadiens vs Pittsburgh Penguins</a></td>
+            <td>December 21, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 16:00:00" data-start="2025-12-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">New York Rangers vs Nashville Predators</a></td>
+            <td>December 21, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 16:00:00" data-start="2025-12-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Toronto Maple Leafs vs Dallas Stars</a></td>
+            <td>December 21, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 16:00:00" data-start="2025-12-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Winnipeg Jets vs Utah Mammoth</a></td>
+            <td>December 21, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 16:00:00" data-start="2025-12-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Vegas Golden Knights vs Edmonton Oilers</a></td>
+            <td>December 21, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-22 17:00:00" data-start="2025-12-21 17:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
