--- a/index.html
+++ b/index.html
@@ -183,28 +183,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
-                    <td>December 20, 2025 04:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 20, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">Laliga</a></td>
+                    <td>December 21, 2025 05:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 21, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
-                    <td>December 20, 2025 05:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 20, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-7">Premier League</a></td>
+                    <td>December 21, 2025 08:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 21, 2025 08:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
-                    <td>December 20, 2025 09:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 20, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/ppv-streams-2">Misfits Mania: Andrew Tate vs Chase Demoor</a></td>
-                    <td>December 20, 2025 10:10 AM</td>
-                    <td><span class="countdown-timer" data-start="December 20, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL (Weekend Games)</a></td>
-                    <td>December 20, 2025 14:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 20, 2025 14:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NFL WEEK 17</a></td>
+                    <td>December 21, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 21, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                 <tr>
